# ScoutingApp-2026

./: .env  .gitignore  App.py  README.md  analysis.html  config.txt  index.html  package-lock.json  package.json  pyproject.toml  scouting.html  superscouting.html  tsconfig.json  webpack.config.js
scripts/: build.bat  buildImports.py  clearBuild.bat  createTestData.bat  deploy.bat  formatHtml.py  mergeMainAndProd.bat  pyRequirements.txt  setup.bat  test_data_generator.py
src/: AppData.ts
src/components/Popup/: ColorField.ts  FieldInterface.ts  IntegerField.ts  PopupDiv.ts
src/components/Team/: SummaryPage.ts
src/dataTypes/: HTMLClassObserver.ts  Signal.ts  Value.ts
src/lib/dataTypes/: Color.ts
src/managers/: TeamListManager.ts
src/python/: AppData.py  ConfigParser.py  tba_poller.py
src/python/apiHelpers/: TBAApi.py
src/python/api_helpers/: GoogleSheetsAPI.py  StatboticsAPI.py  TBAApi.py
src/python/debug/: DebugMenu.py  TimedPrint.py  TimedTest.py
src/python/sse/: MatchNotes.py  PitScoutingNotes.py  SSEManager.py  SuperScoutingEndpoint.py  TBAPoller.py
src/python/typehinting/: StatboticsData.py  TBAData.py
src/python/util/: ConfigParser.py  PitScoutingFieldsParser.py
src/superscouting/: AppData.ts  main.ts
src/superscouting/components/: Accordion.ts
src/util/: CacheBuster.ts  DOMHelper.ts  StringManipulation.ts  TBAJson.ts
static/styles/: customComponents.css  filterAndSort.css  global.css  header.css  matchData.css  pitScouting.css  searchBar.css  teams.css
templates/: analysis.html  scouting.html  superscouting.html
(+102 files in other folders)
